# eddy

./: AUTHORS  INSTALL  README.md  TODO  meson.build  meson_options.txt
po/: POTFILES.in  eddy.pot  meson.build  sk.po
src/: eddy.c  eddy.c~  eddy.h  meson.build
src/bodhilib/: meson.build  storage.c  storage.h
src/bodhilib/tests/: meson.build  test_storage.c
